--- a/frontend/assets/styles.css
+++ b/frontend/assets/styles.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Aladin&display=swap');
+
+* {
+    font-family: 'Aladin', cursive;
+}
+
+
 body {
     min-height: 100vh;
     display: flex;
